uplink-hub/kubernetes/spaces.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spaces
  namespace: staging
  labels:
    app: spaces
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spaces
  template:
    metadata:
      labels:
        app: spaces
    spec:
      containers:
      - name: spaces
        image: nickdodson/spaces-service:1.0.0
        ports:
          - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: spaces
  namespace: staging
spec:
  type: ClusterIP
  selector:
    app: spaces
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
