uplink-hub/kubernetes/ingress.yaml
apiVersion:  networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-ingress
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: auth.example.com
    http:
      paths:
      - path: /api/auth/
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 8080
      - path: /api/graphql
        pathType: Prefix
        backend:
          service:
            name: router
            port:
              number: 8080
